--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,7 @@
             android:name=".TimetableActivity"
             android:label="@string/timetabletitle"/>
         <activity
-            android:name=".PreferenceActivity"
+            android:name=".SettingsActivity"
             android:label="@string/settingtitle"/>
     </application>
 </manifest>
