--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,10 +8,10 @@ android {
 
     defaultConfig {
         applicationId "com.mytimetablemaker"
-        minSdkVersion 24
+        minSdkVersion 28
         targetSdkVersion 30
-        versionCode 31
-        versionName "1.3.1"
+        versionCode 32
+        versionName "1.3.2"
         testInstrumentationRunner "androidx.test.runer.AndroidJUnitRunner"
     }
 
@@ -46,6 +46,7 @@ dependencies {
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.core:core-ktx:1.6.0-alpha01'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -58,17 +59,17 @@ dependencies {
     testImplementation 'junit:junit:4.13'
 
     //AdMob広告
-    implementation 'com.google.android.gms:play-services-ads:19.6.0'
+    implementation 'com.google.android.gms:play-services-ads:19.8.0'
     //Firebase連携
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     //Firebase Analytics
     implementation 'com.google.firebase:firebase-analytics'
     //Firebase ユーザー認証
-    implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.google.firebase:firebase-auth:20.0.3'
     implementation 'com.google.firebase:firebase-auth-ktx'
     //Firebase Database
-    implementation 'com.google.firebase:firebase-database:19.6.0'
-    implementation 'com.google.firebase:firebase-firestore:22.0.1'
+    implementation 'com.google.firebase:firebase-database:19.7.0'
+    implementation 'com.google.firebase:firebase-firestore:22.1.1'
     //Firebase UI (Used in FirebaseUIActivity
     implementation 'com.firebaseui:firebase-ui-auth:6.3.0'
 }
