--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,8 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -41,7 +42,7 @@ dependencies {
     //ローカルバイナリへの依存関係（Gradleはプロジェクトのlibsディレクトリ内の.jarファイルへの依存関係を宣言）
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //Kotlinプロジェクトの生成
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.4.21"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
@@ -69,7 +70,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth-ktx'
     //Firebase Database
     implementation 'com.google.firebase:firebase-database:19.7.0'
-    implementation 'com.google.firebase:firebase-firestore:22.1.1'
+    implementation 'com.google.firebase:firebase-firestore:22.1.2'
     //Firebase UI (Used in FirebaseUIActivity
     implementation 'com.firebaseui:firebase-ui-auth:6.3.0'
 }
