--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,16 +8,17 @@ android {
 
     defaultConfig {
         applicationId "com.mytimetablemaker"
-        minSdkVersion 24
+        minSdkVersion 28
         targetSdkVersion 30
-        versionCode 31
-        versionName "1.3.1"
+        versionCode 42
+        versionName "1.4.2"
         testInstrumentationRunner "androidx.test.runer.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
@@ -41,8 +42,8 @@ dependencies {
     //ローカルバイナリへの依存関係（Gradleはプロジェクトのlibsディレクトリ内の.jarファイルへの依存関係を宣言）
     implementation fileTree(dir: "libs", include: ["*.jar"])
     //Kotlinプロジェクトの生成
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.7'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.72"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.8'
 
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.core:core-ktx:1.3.2'
@@ -50,7 +51,7 @@ dependencies {
     implementation 'androidx.gridlayout:gridlayout:1.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'androidx.preference:preference-ktx:1.1.1'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -58,17 +59,17 @@ dependencies {
     testImplementation 'junit:junit:4.13'
 
     //AdMob広告
-    implementation 'com.google.android.gms:play-services-ads:19.6.0'
+    implementation 'com.google.android.gms:play-services-ads:19.8.0'
     //Firebase連携
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     //Firebase Analytics
     implementation 'com.google.firebase:firebase-analytics'
     //Firebase ユーザー認証
-    implementation 'com.google.firebase:firebase-auth:20.0.2'
+    implementation 'com.google.firebase:firebase-auth:20.0.4'
     implementation 'com.google.firebase:firebase-auth-ktx'
     //Firebase Database
-    implementation 'com.google.firebase:firebase-database:19.6.0'
-    implementation 'com.google.firebase:firebase-firestore:22.0.1'
+    implementation 'com.google.firebase:firebase-database:19.7.0'
+    implementation 'com.google.firebase:firebase-firestore:22.1.2'
     //Firebase UI (Used in FirebaseUIActivity
     implementation 'com.firebaseui:firebase-ui-auth:6.3.0'
 }
