--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = "1.4.20"
+    ext.kotlin_version = "1.7.20"
     repositories {
         google()
         mavenLocal()
-        jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.2"
-        classpath "com.google.gms:google-services:4.3.4"
+        classpath "com.android.tools.build:gradle:7.3.0"
+        classpath "com.google.gms:google-services:4.3.14"
         //noinspection DifferentKotlinGradleVersion
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
@@ -22,7 +22,7 @@ allprojects {
     repositories {
         google()
         mavenLocal()
-        jcenter()
+        mavenCentral()
     }
 }
 
