--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,17 +2,21 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android'
 
+
 android {
-    compileSdkVersion 33
-    buildToolsVersion '32.0.0'
+    compileSdk 34
+    buildToolsVersion '33.0.2'
 
     defaultConfig {
         applicationId "com.mytimetablemaker"
         minSdkVersion 24
-        targetSdkVersion 33
-        versionCode 44
-        versionName "1.4.4"
+        targetSdkVersion 34
+        versionCode 52
+        versionName "1.6.2"
         testInstrumentationRunner "androidx.test.runer.AndroidJUnitRunner"
+        multiDexEnabled true
+        vectorDrawables.useSupportLibrary = true
+        manifestPlaceholders = [APP_ID: project.property("APP_ID")];
     }
 
     buildTypes {
@@ -24,63 +28,68 @@ android {
     }
 
     buildFeatures {
-//        dataBinding = true
+        dataBinding = true
         viewBinding = true
     }
 
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
     }
 
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     namespace 'com.example.mytimetablemaker'
+    ndkVersion '21.4.7075529'
+}
+
+ext {
+    myAdMobAppId = findProperty("UNIT_ID") ?: "APP_ID"
 }
 
 dependencies {
+
+
 
     //ローカルバイナリへの依存関係（Gradleはプロジェクトのlibsディレクトリ内の.jarファイルへの依存関係を宣言）
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
     //Kotlinプロジェクトの生成
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.7.20"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.8.22"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.4'
+    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.22"))
 
-    implementation "androidx.activity:activity-ktx:1.6.0"
-    implementation "androidx.fragment:fragment-ktx:1.5.3"
-
-    implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation 'androidx.activity:activity:1.6.1'
+    implementation 'androidx.activity:activity-ktx:1.6.1'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation "androidx.fragment:fragment-ktx:1.5.5"
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.gridlayout:gridlayout:1.0.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
+    implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
+    implementation "androidx.constraintlayout:constraintlayout-core:1.0.4"
+    implementation "androidx.coordinatorlayout:coordinatorlayout:1.2.0"
+    implementation 'com.google.android.material:material:1.10.0'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.preference:preference-ktx:1.2.0'
-    implementation 'com.google.firebase:firebase-firestore-ktx:24.3.1'
-    implementation 'com.google.android.gms:play-services-ads-lite:21.3.0'
-    implementation 'com.google.android.gms:play-services-tasks:18.0.2'
-    implementation 'com.google.firebase:firebase-common-ktx:20.1.2'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    testImplementation 'junit:junit:4.13'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    testImplementation 'junit:junit:4.13.2'
 
     //AdMob広告
-    implementation 'com.google.android.gms:play-services-ads:21.3.0'
+    implementation 'com.google.android.gms:play-services-ads:22.4.0'
     //Firebase連携
     implementation platform('com.google.firebase:firebase-bom:26.1.0')
     //Firebase ユーザー認証
-    implementation 'com.google.firebase:firebase-auth:21.0.8'
+    implementation 'com.google.firebase:firebase-auth:22.1.2'
     implementation 'com.google.firebase:firebase-auth-ktx'
-    //Firebase Database
-    implementation 'com.google.firebase:firebase-database:20.0.6'
-    implementation 'com.google.firebase:firebase-firestore:24.3.1'
-    //Firebase UI (Used in FirebaseUIActivity
     implementation 'com.firebaseui:firebase-ui-auth:7.2.0'
-
+    //Firebase Database
+    implementation 'com.google.firebase:firebase-common-ktx:20.4.2'
+    implementation 'com.google.firebase:firebase-database:20.2.2'
+    implementation 'com.google.firebase:firebase-firestore:24.8.1'
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.8.1'
+    //SplashScreen
+    implementation "androidx.core:core-splashscreen:1.0.1"
 }
