--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,14 @@
+# Android build configuration
 android.nonFinalResIds=false
 android.nonTransitiveRClass=true
 android.useAndroidX=true
+
+# Gradle JVM configuration
 org.gradle.jvmargs=-Xmx2048M -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+
+# Kotlin code style
 kotlin.code.style=official
+
+# AdMob configuration
 APP_ID = ca-app-pub-1585283309075901~2388370986
 UNIT_ID = ca-app-pub-1585283309075901/4381654099
