--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- Android Application Manifest -->
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Internet and network permissions for AdMob and Firestore -->
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
+    <!-- Main application configuration -->
     <application
         android:name=".Application"
         android:icon="@mipmap/ic_launcher"
@@ -13,12 +16,14 @@
         android:usesCleartextTraffic="false"
         android:networkSecurityConfig="@xml/network_security_config">
 
+        <!-- AdMob application ID for advertisements -->
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
             android:value="${APP_ID}" />
 
+        <!-- Main activity - entry point of the application -->
         <activity
-            android:name=".SplashActivity"
+            android:name=".MainActivity"
             android:exported="true"
             android:label="@string/appName"
             android:theme="@style/SplashTheme">
@@ -28,22 +33,26 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/appName"
-            android:theme="@style/MainTheme" />
+        
+        <!-- Settings activity for app configuration -->
         <activity
             android:name=".SettingsActivity"
             android:label="@string/settingsTitle"
             android:theme="@style/SettingsTheme" />
+            
+        <!-- Login activity for user authentication -->
         <activity
             android:name=".LoginActivity"
             android:label="@string/appName"
             android:theme="@style/SettingsTheme" />
+            
+        <!-- Sign up activity for user registration -->
         <activity
             android:name=".SignUpActivity"
             android:label="@string/appName"
             android:theme="@style/SettingsTheme" />
+            
+        <!-- Timetable activity for schedule management -->
         <activity
             android:name=".TimetableActivity"
             android:label="@string/timetableTitle"
