--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,19 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 plugins {
+    // Android application plugin
     id 'com.android.application' version '8.11.0' apply false
+    // Android library plugin
     id 'com.android.library' version '8.11.0' apply false
+    // Kotlin Android plugin
     id 'org.jetbrains.kotlin.android' version '2.2.0' apply false
+    // Google Services plugin for Firebase
     id 'com.google.gms.google-services' version '4.4.3' apply false
+    // Kotlin Compose plugin
+    id 'org.jetbrains.kotlin.plugin.compose' version '2.2.0' apply false
 }
 
+// Clean task to remove build directory
 tasks.register('clean', Delete) {
     delete rootProject.buildDir
 }
