--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,15 @@
+// Plugin management configuration
 pluginManagement {
     repositories {
         google()
         mavenCentral()
         gradlePluginPortal()
+        // JetBrains Compose repository
+        maven { url "https://maven.pkg.jetbrains.space/public/p/compose/dev" }
     }
 }
 
+// Dependency resolution management
 dependencyResolutionManagement {
     repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
     repositories {
@@ -14,5 +18,6 @@ dependencyResolutionManagement {
     }
 }
 
+// Project configuration
 rootProject.name = "mytimetablemaker"
 include ':app'
